Collecting resource governor enabled & db file state.  added database growth report and dba checks error log report

--- a/DBAChecksReports/SnapshotDates.rdl
+++ b/DBAChecksReports/SnapshotDates.rdl
@@ -214,6 +214,7 @@
                           <PaddingBottom>2pt</PaddingBottom>
                         </Style>
                       </Textbox>
+                      <rd:Selected>true</rd:Selected>
                     </CellContents>
                   </TablixCornerCell>
                 </TablixCornerRow>
